Make phone number and surname optional when updating the user profile (#1658)